// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`generateTest should generateTest for js contents passed  1`] = `
"describe(\\"add1\\", () => {
  it(\\"should fail auto generated test\\", () => {
    expect(add1()).toBe(false);
  });
});
"
`;

exports[`generateTest should generateTest for test for react contents passed  1`] = `""`;

exports[`generateTest should generateTest for typescript contents passed  1`] = `
"describe(\\"greeter\\", () => {
  it(\\"should fail auto generated test\\", () => {
    expect(greeter()).toBe(false);
  });
});
"
`;

exports[`generateTest should generateTest test for flow contents passed  1`] = `""`;

exports[`generateTestTemplate should be able to generate a testTemplate for code containing flow types 1`] = `
"import addOne from \\"..\\";
describe(\\"addOne\\", () => {
  it(\\"should fail auto generated test\\", () => {
    expect(addOne()).toBe(false);
  });
});
"
`;

exports[`generateTestTemplate should be able to generate a testTemplate for code containing typescript types 1`] = `
"import { greeter } from \\"..\\";
describe(\\"greeter\\", () => {
  it(\\"should fail auto generated test\\", () => {
    expect(greeter()).toBe(false);
  });
});
"
`;

exports[`generateTestTemplate should be able to generate a testTemplate for react code 1`] = `
"import RandomComponent from \\"..\\";
describe(\\"RandomComponent\\", () => {
  it(\\"should fail auto generated test\\", () => {
    expect(RandomComponent()).toBe(false);
  });
});
"
`;

exports[`generateTestTemplate should return a default mod template if template contains no named mods 1`] = `
"import obj from \\"..\\";
describe(\\"obj\\", () => {
  it(\\"should fail auto generated test\\", () => {
    expect(obj()).toBe(false);
  });
});
"
`;

exports[`generateTestTemplate should return a named mod template if template contains no default mod 1`] = `
"import { add1 } from \\"..\\";
describe(\\"add1\\", () => {
  it(\\"should fail auto generated test\\", () => {
    expect(add1()).toBe(false);
  });
});
"
`;

exports[`generateTestTemplate should return a test file template if js contents contains default & named mods 1`] = `
"import obj, { add1 } from \\"..\\";
describe(\\"obj\\", () => {
  it(\\"should fail auto generated test\\", () => {
    expect(obj()).toBe(false);
  });
});
describe(\\"add1\\", () => {
  it(\\"should fail auto generated test\\", () => {
    expect(add1()).toBe(false);
  });
});
"
`;
